turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:27: error: type mismatch;
 found   : (Int, Char, Int)
 required: Array[Int]
    rule(0)(0)=(1,'R',0)
               ^Turmite:28: error: type mismatch;
 found   : (Int, Char, Int)
 required: Array[Int]
    rule(0)(1)=(1,'R',1)
               ^Turmite:29: error: type mismatch;
 found   : (Int, Char, Int)
 required: Array[Int]
    rule(1)(0)=(0,'N',0)
               ^Turmite:30: error: type mismatch;
 found   : (Int, Char, Int)
 required: Array[Int]
    rule(1)(1)=(0,'N',1)
               ^